Fix remaining issues

--- a/docs/api/qiskit/release-notes/0.25.mdx
+++ b/docs/api/qiskit/release-notes/0.25.mdx
@@ -596,11 +596,11 @@ The Qiskit Terra 0.17.0 includes many new features and bug fixes. The major new 
 
 *   Two new transpiler passess, [`GateDirection`](/docs/api/qiskit/0.46/qiskit.transpiler.passes.GateDirection "qiskit.transpiler.passes.GateDirection") and [`qiskit.transpiler.passes.CheckGateDirection`](/docs/api/qiskit/0.46/qiskit.transpiler.passes.CheckGateDirection "qiskit.transpiler.passes.CheckGateDirection"), were added to the [`qiskit.transpiler.passes`](/docs/api/qiskit/0.46/transpiler_passes#module-qiskit.transpiler.passes "qiskit.transpiler.passes") module. These new passes are inteded to be more general replacements for `CXDirection` and `CheckCXDirection` (which are both now deprecated, see the deprecation notes for more details) that perform the same function but work with other gates beside just [`CXGate`](/docs/api/qiskit/0.46/qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate").
 
-*   When running on Windows, parallel execution with the [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") function can now be enabled (it is still disabled by default). To do this you can either set `parallel = True` in a user config file, or set the `QISKIT_PARALLEL` environment variable to `TRUE` (this will also effect [`transpile()`](/docs/api/qiskit/0.46/compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") and [`assemble()`](/docs/api/qiskit/0.46/compiler#qiskit.compiler.assemble "qiskit.compiler.assemble") which both use [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") internally). It is important to note that when enabling parallelism on Windows there are limitations around how Python launches processes for Windows, see the Known Issues section below for more details on the limitations with parallel execution on Windows.
+*   When running on Windows, parallel execution with the [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") function can now be enabled (it is still disabled by default). To do this you can either set `parallel = True` in a user config file, or set the `QISKIT_PARALLEL` environment variable to `TRUE` (this will also effect [`transpile()`](/docs/api/qiskit/0.46/compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") and [`assemble()`](/docs/api/qiskit/0.46/compiler#qiskit.compiler.assemble "qiskit.compiler.assemble") which both use [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") internally). It is important to note that when enabling parallelism on Windows there are limitations around how Python launches processes for Windows, see the Known Issues section below for more details on the limitations with parallel execution on Windows.
 
 *   A new function, [`hellinger_distance()`](/docs/api/qiskit/0.46/quantum_info#qiskit.quantum_info.hellinger_distance "qiskit.quantum_info.hellinger_distance"), for computing the Hellinger distance between two counts distributions has been added to the [`qiskit.quantum_info`](/docs/api/qiskit/0.46/quantum_info#module-qiskit.quantum_info "qiskit.quantum_info") module.
 
-*   The [`decompose_clifford()`](/docs/api/qiskit/0.46/quantum_info#qiskit.quantum_info.decompose_clifford "qiskit.quantum_info.decompose_clifford") function in the [`qiskit.quantum_info`](/docs/api/qiskit/0.46/quantum_info#module-qiskit.quantum_info "qiskit.quantum_info") module (which gets used internally by the [`qiskit.quantum_info.Clifford.to_circuit()`](/docs/api/qiskit/0.46/qiskit.quantum_info.Clifford#to_circuit "qiskit.quantum_info.Clifford.to_circuit") method) has a new kwarg `method` which enables selecting the synthesis method used by either setting it to `'AG'` or `'greedy'`. By default for more than three qubits it is set to `'greedy'` which uses a non-optimal greedy compilation routine for Clifford elements synthesis, by Bravyi et. al., which typically yields better CX cost compared to the previously used Aaronson-Gottesman method (for more than two qubits). You can use the `method` kwarg to revert to the previous default Aaronson-Gottesman method by setting `method='AG'`.
+*   The `decompose_clifford()` function in the [`qiskit.quantum_info`](/docs/api/qiskit/0.46/quantum_info#module-qiskit.quantum_info "qiskit.quantum_info") module (which gets used internally by the [`qiskit.quantum_info.Clifford.to_circuit()`](/docs/api/qiskit/0.46/qiskit.quantum_info.Clifford#to_circuit "qiskit.quantum_info.Clifford.to_circuit") method) has a new kwarg `method` which enables selecting the synthesis method used by either setting it to `'AG'` or `'greedy'`. By default for more than three qubits it is set to `'greedy'` which uses a non-optimal greedy compilation routine for Clifford elements synthesis, by Bravyi et. al., which typically yields better CX cost compared to the previously used Aaronson-Gottesman method (for more than two qubits). You can use the `method` kwarg to revert to the previous default Aaronson-Gottesman method by setting `method='AG'`.
 
 *   The `Initialize` class in the [`qiskit.extensions`](/docs/api/qiskit/0.46/extensions#module-qiskit.extensions "qiskit.extensions") module can now be constructed using an integer. The ‘1’ bits of the integer will insert a `Reset` and an [`XGate`](/docs/api/qiskit/0.46/qiskit.circuit.library.XGate "qiskit.circuit.library.XGate") into the circuit for the corresponding qubit. This will be done using the standard little-endian convention is qiskit, ie the rightmost bit of the integer will set qubit 0. For example, setting the parameter in `Initialize` equal to `5` will set qubits 0 and 2 to value 1.
 
@@ -645,9 +645,9 @@ The Qiskit Terra 0.17.0 includes many new features and bug fixes. The major new 
 
 *   Improved the performance of [`qiskit.quantum_info.Statevector.expectation_value()`](/docs/api/qiskit/0.46/qiskit.quantum_info.Statevector#expectation_value "qiskit.quantum_info.Statevector.expectation_value") and [`qiskit.quantum_info.DensityMatrix.expectation_value()`](/docs/api/qiskit/0.46/qiskit.quantum_info.DensityMatrix#expectation_value "qiskit.quantum_info.DensityMatrix.expectation_value") when the argument operator is a [`Pauli`](/docs/api/qiskit/0.46/qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli") or [`SparsePauliOp`](/docs/api/qiskit/0.46/qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp") operator.
 
-*   The user config file has 2 new configuration options, `num_processes` and `parallel`, which are used to control the default behavior of [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map"). The `parallel` option is a boolean that is used to dictate whether [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") will run in multiple processes or not. If it set to `False` calls to [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") will be executed serially, while setting it to `True` will enable parallel execution. The `num_processes` option takes an integer which sets how many CPUs to use when executing in parallel. By default it will use the number of CPU cores on a system.
+*   The user config file has 2 new configuration options, `num_processes` and `parallel`, which are used to control the default behavior of [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map"). The `parallel` option is a boolean that is used to dictate whether [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") will run in multiple processes or not. If it set to `False` calls to [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") will be executed serially, while setting it to `True` will enable parallel execution. The `num_processes` option takes an integer which sets how many CPUs to use when executing in parallel. By default it will use the number of CPU cores on a system.
 
-*   There are 2 new environment variables, `QISKIT_PARALLEL` and `QISKIT_NUM_PROCS`, that can be used to control the default behavior of [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map"). The `QISKIT_PARALLEL` option can be set to the `TRUE` (any capitalization) to set the default to run in multiple processes when [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") is called. If it is set to any other value [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") will be executed serially. `QISKIT_NUM_PROCS` takes an integer (for example `QISKIT_NUM_PROCS=5`) which will be used as the default number of processes to run with. Both of these will take precedence over the equivalent option set in the user config file.
+*   There are 2 new environment variables, `QISKIT_PARALLEL` and `QISKIT_NUM_PROCS`, that can be used to control the default behavior of [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map"). The `QISKIT_PARALLEL` option can be set to the `TRUE` (any capitalization) to set the default to run in multiple processes when [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") is called. If it is set to any other value [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") will be executed serially. `QISKIT_NUM_PROCS` takes an integer (for example `QISKIT_NUM_PROCS=5`) which will be used as the default number of processes to run with. Both of these will take precedence over the equivalent option set in the user config file.
 
 *   A new method, [`gradient()`](/docs/api/qiskit/0.46/qiskit.circuit.ParameterExpression#gradient "qiskit.circuit.ParameterExpression.gradient"), has been added to the [`ParameterExpression`](/docs/api/qiskit/0.46/qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression") class. This method is used to evaluate the gradient of a [`ParameterExpression`](/docs/api/qiskit/0.46/qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression") object.
 
@@ -868,7 +868,7 @@ The Qiskit Terra 0.17.0 includes many new features and bug fixes. The major new 
 
 *   Attempting to add an `qiskit.pulse.Instruction` object with a parameterized `duration` (ie the value of `duration` is an unbound [`Parameter`](/docs/api/qiskit/0.46/qiskit.circuit.Parameter "qiskit.circuit.Parameter") or [`ParameterExpression`](/docs/api/qiskit/0.46/qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression") object) to a [`qiskit.pulse.Schedule`](/docs/api/qiskit/0.46/qiskit.pulse.Schedule "qiskit.pulse.Schedule") is not supported. Attempting to do so will result in `UnassignedDurationError` [`PulseError`](/docs/api/qiskit/0.46/pulse#qiskit.pulse.PulseError "qiskit.pulse.PulseError") being raised. This is a limitation of how the `Instruction` overlap constraints are evaluated currently. This is supported by [`ScheduleBlock`](/docs/api/qiskit/0.46/qiskit.pulse.ScheduleBlock "qiskit.pulse.ScheduleBlock"), in which the overlap constraints are evaluated just before the execution.
 
-*   On Windows systems when parallel execution is enabled for [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") parallelism may not work when called from a script running outside of a `if __name__ == '__main__':` block. This is due to how Python launches parallel processes on Windows. If a `RuntimeError` or `AttributeError` are raised by scripts that call [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") (including using functions that use `parallel_map()` internally like [`transpile()`](/docs/api/qiskit/0.46/compiler#qiskit.compiler.transpile "qiskit.compiler.transpile")) with Windows and parallelism enabled you can try embedding the script calls inside `if __name__ == '__main__':` to workaround the issue. For example:
+*   On Windows systems when parallel execution is enabled for [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") parallelism may not work when called from a script running outside of a `if __name__ == '__main__':` block. This is due to how Python launches parallel processes on Windows. If a `RuntimeError` or `AttributeError` are raised by scripts that call [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") (including using functions that use `parallel_map()` internally like [`transpile()`](/docs/api/qiskit/0.46/compiler#qiskit.compiler.transpile "qiskit.compiler.transpile")) with Windows and parallelism enabled you can try embedding the script calls inside `if __name__ == '__main__':` to workaround the issue. For example:
 
     ```python
     from qiskit import QuantumCircuit, QiskitError
@@ -978,7 +978,7 @@ The Qiskit Terra 0.17.0 includes many new features and bug fixes. The major new 
 
 *   The [`PulseDefaults`](/docs/api/qiskit/0.46/qiskit.providers.models.PulseDefaults "qiskit.providers.models.PulseDefaults") returned by the fake pulse backends `qiskit.test.mock.FakeOpenPulse2Q` and `qiskit.test.mock.FakeOpenPulse3Q` have been updated to have more realistic pulse sequence definitions. If you are using these fake backend classes you may need to update your usage because of these changes.
 
-*   The default synthesis method used by [`decompose_clifford()`](/docs/api/qiskit/0.46/quantum_info#qiskit.quantum_info.decompose_clifford "qiskit.quantum_info.decompose_clifford") function in the [`quantum_info`](/docs/api/qiskit/0.46/quantum_info#module-qiskit.quantum_info "qiskit.quantum_info") module (which gets used internally by the [`qiskit.quantum_info.Clifford.to_circuit()`](/docs/api/qiskit/0.46/qiskit.quantum_info.Clifford#to_circuit "qiskit.quantum_info.Clifford.to_circuit") method) for more than 3 qubits now uses a non-optimal greedy compilation routine for Clifford elements synthesis, by Bravyi et. al., which typically yields better CX cost compared to the old default. If you need to revert to the previous Aaronson-Gottesman method this can be done by setting `method='AG'`.
+*   The default synthesis method used by `decompose_clifford()` function in the [`quantum_info`](/docs/api/qiskit/0.46/quantum_info#module-qiskit.quantum_info "qiskit.quantum_info") module (which gets used internally by the [`qiskit.quantum_info.Clifford.to_circuit()`](/docs/api/qiskit/0.46/qiskit.quantum_info.Clifford#to_circuit "qiskit.quantum_info.Clifford.to_circuit") method) for more than 3 qubits now uses a non-optimal greedy compilation routine for Clifford elements synthesis, by Bravyi et. al., which typically yields better CX cost compared to the old default. If you need to revert to the previous Aaronson-Gottesman method this can be done by setting `method='AG'`.
 
 *   The previously deprecated module `qiskit.visualization.interactive`, which was deprecated in the 0.15.0 release, has now been removed. Instead you should use the matplotlib based visualizations:
 
@@ -1048,7 +1048,7 @@ The Qiskit Terra 0.17.0 includes many new features and bug fixes. The major new 
 
     If you are using any of these methods you will need to manually install networkx in your environment to continue using them.
 
-*   By default on macOS with Python >=3.8 [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") will no longer run in multiple processes. This is a change from previous releases where the default behavior was that [`parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") would launch multiple processes. This change was made because with newer versions of macOS with Python 3.8 and 3.9 multiprocessing is either unreliable or adds significant overhead because of the change in Python 3.8 to launch new processes with `spawn` instead of `fork`. To re-enable parallel execution on macOS with Python >= 3.8 you can use the user config file `parallel` option or set the environment variable `QISKIT_PARALLEL` to `True`.
+*   By default on macOS with Python >=3.8 [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") will no longer run in multiple processes. This is a change from previous releases where the default behavior was that [`parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") would launch multiple processes. This change was made because with newer versions of macOS with Python 3.8 and 3.9 multiprocessing is either unreliable or adds significant overhead because of the change in Python 3.8 to launch new processes with `spawn` instead of `fork`. To re-enable parallel execution on macOS with Python >= 3.8 you can use the user config file `parallel` option or set the environment variable `QISKIT_PARALLEL` to `True`.
 
 *   The previously deprecated kwarg `callback` on the constructor for the [`PassManager`](/docs/api/qiskit/0.46/qiskit.transpiler.PassManager "qiskit.transpiler.PassManager") class has been removed. This kwarg has been deprecated since the 0.13.0 release (April, 9th 2020). Instead you can pass the `callback` kwarg to the [`qiskit.transpiler.PassManager.run()`](/docs/api/qiskit/0.46/qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") method directly. For example, if you were using:
 
