--- a/docs/api/qiskit/release-notes/0.45.mdx
+++ b/docs/api/qiskit/release-notes/0.45.mdx
@@ -945,7 +945,7 @@ Some feature highlights of Qiskit 0.45.0 are:
 
 *   Added support to allow `SparsePauliOp` default initialization passing an empty iterable to the static methods [`from_list()`](/docs/api/qiskit/0.46/qiskit.quantum_info.SparsePauliOp#from_list "qiskit.quantum_info.SparsePauliOp.from_list") and [`from_sparse_list()`](/docs/api/qiskit/0.46/qiskit.quantum_info.SparsePauliOp#from_sparse_list "qiskit.quantum_info.SparsePauliOp.from_sparse_list"). Fixed [#10159](https://github.com/Qiskit/qiskit/issues/10159).
 
-*   The use of the (deprecated) `Optimizer` class on [`AQC`](/docs/api/qiskit/0.46/qiskit.transpiler.synthesis.aqc.AQC "qiskit.transpiler.synthesis.aqc.AQC") did not have a non-deprecated alternative path, which should have been introduced in Qiskit 0.44. It now accepts a callable that implements the [`Minimizer`](/docs/api/qiskit/0.46/qiskit.algorithms.optimizers.Minimizer "qiskit.algorithms.optimizers.Minimizer") protocol, as explicitly stated in the deprecation warning. The callable can look like the following example:
+*   The use of the (deprecated) `Optimizer` class on [`AQC`](/docs/api/qiskit/0.46/qiskit.synthesis.unitary.aqc.AQC "qiskit.transpiler.synthesis.aqc.AQC") did not have a non-deprecated alternative path, which should have been introduced in Qiskit 0.44. It now accepts a callable that implements the [`Minimizer`](/docs/api/qiskit/0.46/qiskit.algorithms.optimizers.Minimizer "qiskit.algorithms.optimizers.Minimizer") protocol, as explicitly stated in the deprecation warning. The callable can look like the following example:
 
     > ```python
     > from scipy.optimize import minimize
