--- a/docs/api/qiskit/release-notes/0.15.mdx
+++ b/docs/api/qiskit/release-notes/0.15.mdx
@@ -173,7 +173,7 @@ The 0.12.0 release includes several new features and bug fixes. The biggest chan
 
 #### Known Issues
 
-*   Running functions that use [`qiskit.tools.parallel_map()`](/docs/api/qiskit/0.46/tools#qiskit.tools.parallel_map "qiskit.tools.parallel_map") (for example `qiskit.execute.execute()`, [`qiskit.compiler.transpile()`](/docs/api/qiskit/0.46/compiler#qiskit.compiler.transpile "qiskit.compiler.transpile"), and [`qiskit.transpiler.PassManager.run()`](/docs/api/qiskit/0.46/qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run")) may not work when called from a script running outside of a `if __name__ == '__main__':` block when using Python 3.8 on MacOS. Other environments are unaffected by this issue. This is due to changes in how parallel processes are launched by Python 3.8 on MacOS. If `RuntimeError` or `AttributeError` are raised by scripts that are directly calling `parallel_map()` or when calling a function that uses it internally with Python 3.8 on MacOS embedding the script calls inside `if __name__ == '__main__':` should workaround the issue. For example:
+*   Running functions that use [`qiskit.tools.parallel_map()`](/docs/api/qiskit/0.46/utils#qiskit.utils.parallel_map "qiskit.tools.parallel_map") (for example `qiskit.execute.execute()`, [`qiskit.compiler.transpile()`](/docs/api/qiskit/0.46/compiler#qiskit.compiler.transpile "qiskit.compiler.transpile"), and [`qiskit.transpiler.PassManager.run()`](/docs/api/qiskit/0.46/qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run")) may not work when called from a script running outside of a `if __name__ == '__main__':` block when using Python 3.8 on MacOS. Other environments are unaffected by this issue. This is due to changes in how parallel processes are launched by Python 3.8 on MacOS. If `RuntimeError` or `AttributeError` are raised by scripts that are directly calling `parallel_map()` or when calling a function that uses it internally with Python 3.8 on MacOS embedding the script calls inside `if __name__ == '__main__':` should workaround the issue. For example:
 
     ```python
     from qiskit import QuantumCircuit, QiskitError
