--- a/docs/guides/initialize-account.mdx
+++ b/docs/guides/initialize-account.mdx
@@ -114,7 +114,7 @@ service = QiskitRuntimeService(name="<name_of_saved_credentials>")
 
     service = QiskitRuntimeService(instance="CRN_B", name="account_A")
     ```
-- The service tries to load the default saved accoun only if you don't provide a `token` or `name` when initializing a service.  However, if an `instance` is provided explicitly, the service try to connect to that instance by using the default credentials. If there is any conflict, a warning is raised.
+- The service tries to load the default saved account only if you don't provide a `token` or `name` when initializing a service.  However, if an `instance` is provided explicitly, the service try to connect to that instance by using the default credentials. If there is any conflict, a warning is raised.
     Example: In the following example, the service tries to load the default credentials use the instance `CRN_B` - even if there is a different instance specified in the default account.
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
