--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "Let's start by loading some necessary packages including Runtime primitives. We will also select the least-busy quantum computer available to us.\n",
     "\n",
-    "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
+    "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/initialize-account) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
   },
   {
