Some progress + typo fix

--- a/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
+++ b/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
@@ -38,9 +38,9 @@
     "As we learned in the last lesson, symmetric key cryptography is very fast and efficient for protecting information, but it has a few limitations:\n",
     "\n",
     "1. As the number of parties wishing to exchange secure information increases, the numbers of keys required grows combinatorially. It provides no mechanism to securely distribute these keys between senders and receivers.\n",
-    "2. There is no provision for [*non-repudiation*][nonrepudiation]. Any party is able to decrypt, or encrypt, messages with no way to guarantee a message was received or where it originated\n",
+    "2. There is no provision for <DefinitionTooltip definition=\"Non-repudiation refers to the ability to prove that a specific party has sent a message. In symmetric key cryptography, since the same key is used for both encryption and decryption, it is not possible to determine which party has created a particular ciphertext. In contrast, asymmetric key cryptography provides non-repudiation through the use of digital signatures.\">*non-repudiation*</DefinitionTooltip>. Any party is able to decrypt, or encrypt, messages with no way to guarantee a message was received or where it originated\n",
     "\n",
-    "The solution to both these problems is provided by *asymmetric key cryptography* (AKC), also known as [*public key cryptography*][59] (PKC), which therefore forms a cornerstone of modern digital security.\n",
+    "The solution to both these problems is provided by *asymmetric key cryptography* (AKC), also known as <DefinitionTooltip definition=\"Reference: Public-key cryptography,Wikipedia. Jul. 2023. Accessed: Jul. 10, 2023.\">[*public key cryptography*](https://en.wikipedia.org/w/index.php?title=Public-key_cryptography&oldid=1163952916)</DefinitionTooltip> (PKC), which therefore forms a cornerstone of modern digital security.\n",
     "\n",
     "Asymmetric key cryptography (AKC) involves the use of a pair of keys – one public, one private. The public and private keys are cryptographically linked and typically generated at the same time as a *key pair* using a specialized mathematical algorithm. The public key, as suggested by its name, is then meant to be freely distributed, while the private key is kept secret by the party generating the key pair. Security of communications employing asymmetric key pairs is assured as long as the private key remains confidential.\n",
     "\n",
@@ -54,10 +54,7 @@
     "2. **Digital signatures** to ensure **authenticity**, **integrity**, and **non-repudiation**.\n",
     "3. **Secure key exchange** to facilitate subsequent use of symmetric cryptosystems.\n",
     "\n",
-    "In modern applications, AKC is primarily used for digital signatures and secure key exchange. In this lesson, we introduce these two key functions, and then we discuss several variations of cryptographic protocols for these functions.\n",
-    "\n",
-    "[nonrepudiation]: #definition-tooltip \"Non-repudiation refers to the ability to prove that a specific party has sent a message. In symmetric key cryptography, since the same key is used for both encryption and decryption, it is not possible to determine which party has created a particular ciphertext. In contrast, asymmetric key cryptography provides non-repudiation through the use of digital signatures.\"\n",
-    "[59]: #definition-tooltip \"Reference: Public-key cryptography,Wikipedia. Jul. 2023. Accessed: Jul. 10, 2023. [link](https://en.wikipedia.org/w/index.php?title=Public-key_cryptography&oldid=1163952916)\""
+    "In modern applications, AKC is primarily used for digital signatures and secure key exchange. In this lesson, we introduce these two key functions, and then we discuss several variations of cryptographic protocols for these functions."
    ]
   },
   {
@@ -68,9 +65,7 @@
    "source": [
     "## Key exchange with asymmetric key cryptography\n",
     "\n",
-    "One of the fundamental problems in cryptography is securely [exchanging keys][60]. For example, if two parties want to use symmetric encryption, both parties need the same key to encrypt and decrypt messages. But how do they securely exchange the key? Asymmetric key cryptography addresses this through interactive and non-interactive key exchange mechanisms.\n",
-    "\n",
-    "[60]: #definition-tooltip \"Reference: Key exchange,Wikipedia. Jan. 2023. Accessed: Jul. 10, 2023. [link](https://en.wikipedia.org/w/index.php?title=Key_exchange&oldid=1134576107)\""
+    "One of the fundamental problems in cryptography is securely <DefinitionTooltip definition=\"Reference: Key exchange,Wikipedia. Jan. 2023. Accessed: Jul. 10, 2023.\">[exchanging keys](https://en.wikipedia.org/w/index.php?title=Key_exchange&oldid=1134576107)</DefinitionTooltip>. For example, if two parties want to use symmetric encryption, both parties need the same key to encrypt and decrypt messages. But how do they securely exchange the key? Asymmetric key cryptography addresses this through interactive and non-interactive key exchange mechanisms."
    ]
   },
   {
