--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -419,7 +419,7 @@
     }
    },
    "source": [
-    "Since we do not know the eigenvalues or eigenstates of the target observable $\\hat{H}$, first we need to consider its diagonalization. Given that $\\hat{H}$ is <DefinitionTooltip definition=\"A hermitian is a square matrix that is equal to its own conjugate transpose, or a linear operator that is self-adjoint.\">hermition</DefinitionTooltip>, there exists a unitary transformation $V$ such that $\\hat{H}=V^\\dagger \\Lambda V,$ where $\\Lambda$ is the diagonal eigenvalue matrix, so $\\langle j | \\Lambda | k \\rangle = 0$ if $j\\neq k$, and $\\langle j | \\Lambda | j \\rangle = \\lambda_j$.\n",
+    "Since we do not know the eigenvalues or eigenstates of the target observable $\\hat{H}$, first we need to consider its diagonalization. Given that $\\hat{H}$ is <DefinitionTooltip definition=\"A hermitian is a square matrix that is equal to its own conjugate transpose, or a linear operator that is self-adjoint.\">hermitian</DefinitionTooltip>, there exists a unitary transformation $V$ such that $\\hat{H}=V^\\dagger \\Lambda V,$ where $\\Lambda$ is the diagonal eigenvalue matrix, so $\\langle j | \\Lambda | k \\rangle = 0$ if $j\\neq k$, and $\\langle j | \\Lambda | j \\rangle = \\lambda_j$.\n",
     "\n",
     "This implies that the expected value can be rewritten as:\n",
     "\n",
