--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -73,8 +73,8 @@ Your user account is associated with one or more [instances,](./instances) ident
     2. Optional: Find the instance you want to use from the [Instances](https://quantum.cloud.ibm.com/instances) page. Click the icon to copy its CRN, then save it in a secure location so you can use it to identify the instance.
 
 <span id="cloud-save"></span>
-### 3. Save your access credentials
-If you are working in a trusted Python environment (such as on a personal laptop or workstation), use the `save_account()` method to save your credentials locally, then use them to initialize the service.
+### 3. Optional: Save your access credentials
+If you are working in a trusted Python environment (such as on a personal laptop or workstation), you can use the `save_account()` method to save your credentials locally, then use them to initialize the service.
 
 <Admonition type="note" title="Notes">
       * If you are not using a trusted environment, follow the instructions in [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) instead. For example, if you are using a public comptuer.
@@ -88,51 +88,52 @@ If you are working in a trusted Python environment (such as on a personal laptop
     ```python
     token = "<your-API-token>"
     ```
-2. Save your credentials. Run this once per account you want to save.
+2. Save your credentials. Run the appropriate code block once per account you want to save.
 
-Save credentials that access a specific instance:
+    Save credentials that access a specific instance:
 
-```python
-  from qiskit_ibm_runtime import QiskitRuntimeService
+    ```python
+    from qiskit_ibm_runtime import QiskitRuntimeService
 
-  QiskitRuntimeService.save_account(
-    token="token",
-    instance="<IBM Cloud CRN or instance name>", # Optional
-    set_as_default=True, # Optional
-    overwrite=True, # Optional
-  )
-```
+    QiskitRuntimeService.save_account(
+      token="token",
+      instance="<IBM Cloud CRN or instance name>", # Optional
+      set_as_default=True, # Optional
+      overwrite=True, # Optional
+    )
+    ```
 
-Save credentials for automatic instance selection:
+    Save credentials for automatic instance selection:
 
-```python
-  from qiskit_ibm_runtime import QiskitRuntimeService
+    ```python
+    from qiskit_ibm_runtime import QiskitRuntimeService
 
-  QiskitRuntimeService.save_account(
-    token="token",
-    plans_preference="['open', 'premium']", # Optional
-    region="<region>", # Optional
-    name="<account-name>", # Optional
-    tags="<instance-tags>", # Optional
-    set_as_default=True, # Optional
-    overwrite=True, # Optional
-  )
-```
+    QiskitRuntimeService.save_account(
+      token="token",
+      plans_preference="['open', 'premium']", # Optional
+      region="<region>", # Optional
+      name="<account-name>", # Optional
+      tags="<instance-tags>", # Optional
+      set_as_default=True, # Optional
+      overwrite=True, # Optional
+    )
+   ```
 
-Options:
+#### Options
 
--**`token`**: IBM Cloud API key. Your token is confidential. Do not share your token in public code.
--**`instance`**: Optionally specify the instance to use.
--**`plans_preference`**: Optionally set the types of plans to prioritize. This is ignored if the instance is specified. Available options are `open` and `premium`. Instances of a certain plan type are excluded if the plan name is not specified. For example, if [`open`] is passed in, only open plan instances are available. This is ignored if `instance` is specified.
--**`region`**: Optionally set the region to use. Accepted values are `us-east` and `eu-de`. This is ignored if `instance` is specified.
--**`tags`**: Optionally specify the instance's tags. Accepts a list of tag name strings. This is ignored if `instance` is specified.
--**`name`**: Optionally name this set of account credentials.
--**`set_as_default`**: Set the value to `True` to save these as your default credentials. If you save only one account, it is automatically set as the default.
--**`overwrite`**: Set this value to `True` to update your default credentials.
+- **`token`**: IBM Cloud API key. Your token is confidential. Do not share your token in public code.
+- **`instance`**: Optionally specify the instance to use.
+- **`plans_preference`**: Optionally set the types of plans to prioritize. This is ignored if the instance is specified. Available options are `open` and `premium`. Instances of a certain plan type are excluded if the plan name is not specified. For example, if [`open`] is passed in, only open plan instances are available. This is ignored if `instance` is specified.
+- **`region`**: Optionally set the region to use. Accepted values are `us-east` and `eu-de`. This is ignored if `instance` is specified.
+- **`tags`**: Optionally specify the instance's tags. Accepts a list of tag name strings. This is ignored if `instance` is specified.
+- **`name`**: Optionally name this set of account credentials.
+- **`set_as_default`**: Set the value to `True` to save these as your default credentials. If you save only one account, it is automatically set as the default.
+- **`overwrite`**: Set this value to `True` to update your default credentials.
 
 
 #### Examples
 
+##### Example 1
 This example saves credentials for specific instances, which allow open and premium access.  The open credentials are set as the default.
 
 ```python
@@ -144,7 +145,8 @@ QiskitRuntimeService.save_account(token="<API_TOKEN>", instance="<CRN_for_open_i
                                   name="open", set_as_default=True)
  ```
 
- This example saves credentials for automatic instance selection.  Qiskit Runtime will only look at premium instances in the EU region that are available to the account. These credentials become the new default.
+##### Example 2
+This example saves credentials for automatic instance selection.  Qiskit Runtime will only look at premium instances in the EU region that are available to the account. These credentials become the new default.
 
 ```python
 QiskitRuntimeService.save_account(
